--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,85 +12,76 @@ jobs:
   release:
     name: Create Release
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
+        with:
+          go-version-file: 'go.mod'
+          cache: false
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ env.GOMODCACHE }}
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-mod-
+      - run: go mod download
+      - run: go build -v .
+      - name: Run tests
+        run: make test
 
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.24'
+      - name: Generate release notes
+        id: release_notes
+        run: |
+          # Get the tag name
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
+          
+          # Get the previous tag
+          PREV_TAG=$(git describe --tags --abbrev=0 $TAG_NAME^ 2>/dev/null || echo "")
+          
+          # Generate release notes
+          if [ -n "$PREV_TAG" ]; then
+            echo "## What's Changed" > release_notes.md
+            echo "" >> release_notes.md
+            git log --pretty=format:"* %s (%h)" $PREV_TAG..$TAG_NAME >> release_notes.md
+            echo "" >> release_notes.md
+            echo "" >> release_notes.md
+            echo "**Full Changelog**: https://github.com/${{ github.repository }}/compare/$PREV_TAG...$TAG_NAME" >> release_notes.md
+          else
+            echo "## What's New" > release_notes.md
+            echo "" >> release_notes.md
+            echo "Initial release of Cadwyn-Go - Stripe-like API versioning for Go applications." >> release_notes.md
+            echo "" >> release_notes.md
+            echo "### Features" >> release_notes.md
+            echo "* 🎯 Simple & Flexible API versioning" >> release_notes.md
+            echo "* 📅 Multiple version formats (date, semantic, string)" >> release_notes.md
+            echo "* 🔄 Instruction-based migrations" >> release_notes.md
+            echo "* 🏗️ Builder pattern for easy configuration" >> release_notes.md
+            echo "* 🌐 Gin integration" >> release_notes.md
+            echo "* 🔧 Schema generation" >> release_notes.md
+            echo "* ⚡ Version detection middleware" >> release_notes.md
+          fi
+          
+          echo "release_notes<<EOF" >> $GITHUB_OUTPUT
+          cat release_notes.md >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
-    - name: Cache Go modules
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cache/go-build
-          ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+      - name: Create Release
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1
+        with:
+          tag_name: ${{ steps.release_notes.outputs.tag_name }}
+          name: Release ${{ steps.release_notes.outputs.tag_name }}
+          body: ${{ steps.release_notes.outputs.release_notes }}
+          draft: false
+          prerelease: ${{ contains(steps.release_notes.outputs.tag_name, 'alpha') || contains(steps.release_notes.outputs.tag_name, 'beta') || contains(steps.release_notes.outputs.tag_name, 'rc') }}
 
-    - name: Run tests
-      run: go test -race ./...
-
-    - name: Build
-      run: go build -v ./...
-
-    - name: Validate examples compile
-      run: go run validate.go
-
-    - name: Generate release notes
-      id: release_notes
-      run: |
-        # Get the tag name
-        TAG_NAME=${GITHUB_REF#refs/tags/}
-        echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-        
-        # Get the previous tag
-        PREV_TAG=$(git describe --tags --abbrev=0 $TAG_NAME^ 2>/dev/null || echo "")
-        
-        # Generate release notes
-        if [ -n "$PREV_TAG" ]; then
-          echo "## What's Changed" > release_notes.md
-          echo "" >> release_notes.md
-          git log --pretty=format:"* %s (%h)" $PREV_TAG..$TAG_NAME >> release_notes.md
-          echo "" >> release_notes.md
-          echo "" >> release_notes.md
-          echo "**Full Changelog**: https://github.com/${{ github.repository }}/compare/$PREV_TAG...$TAG_NAME" >> release_notes.md
-        else
-          echo "## What's New" > release_notes.md
-          echo "" >> release_notes.md
-          echo "Initial release of Cadwyn-Go - Stripe-like API versioning for Go applications." >> release_notes.md
-          echo "" >> release_notes.md
-          echo "### Features" >> release_notes.md
-          echo "* 🎯 Simple & Flexible API versioning" >> release_notes.md
-          echo "* 📅 Multiple version formats (date, semantic, string)" >> release_notes.md
-          echo "* 🔄 Instruction-based migrations" >> release_notes.md
-          echo "* 🏗️ Builder pattern for easy configuration" >> release_notes.md
-          echo "* 🌐 Gin integration" >> release_notes.md
-          echo "* 🔧 Schema generation" >> release_notes.md
-          echo "* ⚡ Version detection middleware" >> release_notes.md
-        fi
-        
-        echo "release_notes<<EOF" >> $GITHUB_OUTPUT
-        cat release_notes.md >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
-
-    - name: Create Release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.release_notes.outputs.tag_name }}
-        release_name: Release ${{ steps.release_notes.outputs.tag_name }}
-        body: ${{ steps.release_notes.outputs.release_notes }}
-        draft: false
-        prerelease: ${{ contains(steps.release_notes.outputs.tag_name, 'alpha') || contains(steps.release_notes.outputs.tag_name, 'beta') || contains(steps.release_notes.outputs.tag_name, 'rc') }}
-
-    - name: Update Go module proxy
-      run: |
-        # Trigger Go module proxy to fetch the new version
-        GOPROXY=proxy.golang.org go list -m github.com/isaacchung/cadwyn-go@${{ steps.release_notes.outputs.tag_name }}
+      - name: Update Go module proxy
+        run: |
+          # Trigger Go module proxy to fetch the new version
+          GOPROXY=proxy.golang.org go list -m github.com/isaacchung/cadwyn-go@${{ steps.release_notes.outputs.tag_name }}
